# pipescraper

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  Tutorial.ipynb  WIKI.md  examples.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: advanced_integration.py  basic_usage.py
pipescraper/: __init__.py  core.py  pipeframe_integration.py  pipeplotly_integration.py  pipes.py  utils.py
tests/: test_google_news.py  test_link_filtering.py  test_newspaper4k.py  test_pipescraper.py
